--- a/angular.json
+++ b/angular.json
@@ -72,8 +72,10 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
+            "port": 4500,
             "browserTarget": "angular:build"
           },
+
           "configurations": {
             "production": {
               "browserTarget": "angular:build:production"
